--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('/assets/fonts/Ubuntu.woff2') format('woff2');
+  src: url('/fonts/Ubuntu.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -15,7 +15,7 @@
   font-family: 'Fira Code';
   font-style: normal;
   font-weight: 400;
-  src: url('/assets/fonts/FiraCode-Regular.woff2') format('woff2');
+  src: url('/fonts/FiraCode-Regular.woff2') format('woff2');
 }
 
 body {
@@ -29,9 +29,24 @@ main {
   width: 90%;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    margin-left: 1.5em;
+    margin-right: 1.5em;
+  }
+
+  main {
+    width: 100%;
+  }
+}
+
 code pre {
   font-family: 'Fira Code', monospace;
   font-size: 90%;
+}
+
+code pre.pre-line {
+  white-space: pre-line;
 }
 
 a {
