Update publish workflow

--- a/index.page
+++ b/index.page
@@ -1,11 +1,11 @@
 meta:
-  title: "1f349.net"
-  author: "1f349.net"
-  og-title: "1f349.net"
-  og-url: "https://1f349.net"
+  title: "1f349.com"
+  author: "1f349.com"
+  og-title: "1f349.com"
+  og-url: "https://1f349.com"
   og-type: "object"
-  og-image: "https://1f349.net/1f349.svg"
-  og-site_name: "1f349.net"
+  og-image: "https://1f349.com/1f349.svg"
+  og-site_name: "1f349.com"
 content: |
   <main>
     <code class="utf-desc">
