--- a/hosting.page
+++ b/hosting.page
@@ -1,11 +1,11 @@
 meta:
-  title: "1f349.net Hosting"
-  author: "1f349.net"
-  og-title: "1f349.net Hosting"
-  og-url: "https://1f349.net/hosting"
+  title: "1f349.com Hosting"
+  author: "1f349.com"
+  og-title: "1f349.com Hosting"
+  og-url: "https://1f349.com/hosting"
   og-type: "object"
-  og-image: "https://1f349.net/1f349.svg"
-  og-site_name: "1f349.net"
+  og-image: "https://1f349.com/1f349.svg"
+  og-site_name: "1f349.com"
 content: |
   <main>
     <p>We are currently hosting the following domains</p>
